# flowy

./: .gitignore  README.md  example.py  pyproject.toml
flowy/: __init__.py
flowy/core/: __init__.py  config.py  context.py  db.py  flow.py  json_utils.py  logger.py  migration_manager.py  progress.py  remark.py  task.py
flowy/core/migration_files/: 001_add_task_progress.py  __init__.py
flowy/web/: __init__.py
flowy/web/controllers/: __init__.py  api.py  flows.py  triggers.py
flowy/web/services/: __init__.py  flow_service.py  scheduler_service.py  trigger_service.py
flowy/web/static/css/: all-history.css  app.css  flows-detail-enhanced.css  flows-modern.css  history-detail-modern.css  history-modern.css  json-viewer.css  triggers.css
flowy/web/static/js/: app.js  json-viewer.js
flowy/web/templates/: base.html
flowy/web/templates/components/: breadcrumb.html  pagination.html  status_badge.html
flowy/web/templates/errors/: 404.html  500.html
flowy/web/templates/flows/: detail.html  list.html
flowy/web/templates/history/: all.html  detail.html  list.html  sidebar_base.html
